# qsyncable

./: CMakeLists.txt  QSyncableConfig.cmake.in  README.md  qsplugin.cpp  qsplugin.h  qsyncableqmltypes.cpp  qsyncableqmltypes.h
module/: qmldir  qsyncable.qmltypes
